Update to @iqbspecs/coding-scheme 3.3.0 and enhance processing dialog
- Upgrade @iqbspecs/coding-scheme to version 3.3.0 across package files.
- Improve EditProcessingDialogComponent for better readability.
- Add "CODER_TRAINING_REQUIRED" processing option with translations.

--- a/projects/ngx-coding-components/src/lib/translations/de.json
+++ b/projects/ngx-coding-components/src/lib/translations/de.json
@@ -162,7 +162,8 @@
     "IGNORE_DISPENSABLE_SPACES": "Doppelte Leerzeichen entfernen",
     "SORT_ARRAY": "Werte sortieren",
     "REPLAY_REQUIRED": "Für Kodierung komplette Unit-Ansicht erforderlich (Replay)",
-    "ATTACHMENT": "Für Kodierung separate Datei erforderlich (Bild, Audio)"
+    "ATTACHMENT": "Für Kodierung separate Datei erforderlich (Bild, Audio)",
+    "CODER_TRAINING_REQUIRED": "Erhöhter Schulungsaufwand"
   },
   "fragmenting": {
     "prompt": "Fragment(e)",
