Add copy and paste functionality for single codes
- Introduced `copySingleCode` and `pasteSingleCode` methods in `SchemerService`.
- Updated UI components to support single-code copy and paste with appropriate tooltips and buttons.
- Added translations for "Copy Code" and "Paste Code".
- Prevent duplicate residual or incomplete codes during paste operations.

--- a/projects/ngx-coding-components/src/lib/translations/de.json
+++ b/projects/ngx-coding-components/src/lib/translations/de.json
@@ -11,6 +11,8 @@
     "load-save-user-role": "Laden / Speichern / NutzerRechte festlegen",
     "more-actions": "Weitere Aktionen",
     "copy": "Kodierung kopieren",
+    "copy-code": "Code kopieren",
+    "paste-code": "Code einfügen",
     "check": "Prüfe Syntax Kodierschema",
     "show": "Zeige Kodierschema",
     "activate-base-no-value": "Aktiviere Basisvariable ohne Wert",
@@ -214,6 +216,7 @@
     },
     "error-message": {
       "residual-exists": "Es existiert bereits ein Code für 'Alle anderen Antworten'.",
+      "nothing-to-paste": "Es wurde kein Code kopiert.",
       "fatal-error": "Ein schwerer Fehler ist aufgetreten",
       "type-not-supported": "Der Code-Typ wird nicht unterstützt.",
       "no-access": "Es fehlen für diese Aktion die Zugriffsrechte."
