Add input field for "page" with tooltip and enhance null safety in VarCodingComponent
- Introduced "page" input field with relevant translation keys and tooltip.

--- a/projects/ngx-coding-components/src/lib/translations/de.json
+++ b/projects/ngx-coding-components/src/lib/translations/de.json
@@ -187,6 +187,8 @@
   },
   "id": "ID",
   "description-position": "Position/Zuordnung",
+  "page": "Seite",
+  "page.tooltip": "Seitenzahl der Variable im Test",
   "code-model": {
     "prompt": "Anzeige Code",
     "NONE": "Regeln und Instruktionen",
