--- a/projects/ngx-coding-components/src/lib/translations/de.json
+++ b/projects/ngx-coding-components/src/lib/translations/de.json
@@ -39,6 +39,13 @@
       "title": "Schemer – Informationen",
       "content": "Der Schemer dient zum Erstellen und Bearbeiten von Kodierschemata für Variablen.\n\n- Basisvariablen bilden die Grundlage der Kodierung.\n- Abgeleitete Variablen können Werte aus anderen Variablen übernehmen oder berechnen.\n- Das Kodierschema wird im Format '@iqbspecs/coding-scheme' erzeugt und beim Export immer mit der Version 3.3 versehen.\n\nHinweis zur Kompatibilität: Beim Laden älterer Dateien (ohne Versionsfeld oder mit älterer Version) werden die Kodierungen übernommen und beim nächsten Speichern/Export im aktuellen Format (3.3) ausgegeben."
     },
+    "version-mismatch": {
+      "title": "Achtung: Abweichende Daten-Version",
+      "content": "Sie haben eine abweichende Daten-Version des Kodierschemas geladen: {{mismatch}}.\nNach dem Speichern ist das Schema auf die Version {{major}}.{{minor}} geändert.",
+      "minor-greater": "Größere Nebenversion",
+      "major-greater": "Größere Hauptversion",
+      "major-less": "Geringere Hauptversion"
+    },
     "export": {
       "title": "Variable exportieren",
       "no-scheme": "Kein Antwortschema bzw. keine Variablen vorhanden.",
@@ -92,6 +99,14 @@
       "title": "Kodierung von \"{{variable}}\" kopieren",
       "prompt": "Die Kodierung der Zielvariable(n) wird überschrieben!",
       "ok": "Kopieren"
+    }
+  },
+
+  "message-dialog": {
+    "default-title": {
+      "error": "Achtung: Fehler",
+      "warning": "Achtung: Warnung",
+      "info": "Hinweis"
     }
   },
 
