Update German translations and reorganize translation keys
- Rearranged and refined translation keys in `de.json` files for better consistency and structure.
- Added missing labels for "Quell-Variablen" and "Ableitungsmethode".

--- a/projects/ngx-coding-components/src/lib/translations/de.json
+++ b/projects/ngx-coding-components/src/lib/translations/de.json
@@ -219,10 +219,12 @@
     "max-score": "Maximale Bewertung"
   },
   "derive-sources": {
+    "label": "Quell-Variable(n)",
     "prompt": "Quell-Variable(n)",
     "error": "Keine Quelle definiert."
   },
   "derive-method": {
+    "label": "Ableitungsmethode",
     "prompt": "Ableitungsmethode",
     "BASE": "Basisvariable",
     "COPY_VALUE": "Wert kopieren",
