Add support for 'MANUAL_AND_RULES' code model to single code component UI conditions and German translations

--- a/projects/ngx-coding-components/src/lib/translations/de.json
+++ b/projects/ngx-coding-components/src/lib/translations/de.json
@@ -207,6 +207,7 @@
   "code-model": {
     "prompt": "Anzeige Code",
     "NONE": "Regeln und Instruktionen",
+    "MANUAL_AND_RULES": "Regeln und Instruktionen",
     "RULES_ONLY": "Nur Regeln",
     "MANUAL_ONLY": "Nur Instruktionen"
   },
