--- a/projects/ngx-coding-components/src/lib/translations/de.json
+++ b/projects/ngx-coding-components/src/lib/translations/de.json
@@ -37,7 +37,13 @@
   "schemer": {
     "info": {
       "title": "Schemer – Informationen",
-      "content": "Der Schemer dient zum Erstellen und Bearbeiten von Kodierschemata für Variablen.\n\n- Basisvariablen bilden die Grundlage der Kodierung.\n- Abgeleitete Variablen können Werte aus anderen Variablen übernehmen oder berechnen.\n- Das Kodierschema wird im Format '@iqbspecs/coding-scheme' erzeugt und beim Export immer mit der Version 3.3 versehen.\n\nHinweis zur Kompatibilität: Beim Laden älterer Dateien (ohne Versionsfeld oder mit älterer Version) werden die Kodierungen übernommen und beim nächsten Speichern/Export im aktuellen Format (3.3) ausgegeben."
+      "intro": "Der Schemer dient zum Erstellen und Bearbeiten von Kodierschemata für Variablen.",
+      "feature-base-title": "Basisvariablen",
+      "feature-base-desc": "bilden die Grundlage der Kodierung.",
+      "feature-derived-title": "Abgeleitete Variablen",
+      "feature-derived-desc": "können Werte aus anderen Variablen übernehmen oder berechnen.",
+      "version-text": "Das Kodierschema wird im Format '@iqbspecs/coding-scheme' erzeugt und beim Export immer mit der Version {{major}}.{{minor}} versehen.",
+      "compatibility-hint": "Beim Laden älterer Dateien (ohne Versionsfeld oder mit älterer Version) werden die Kodierungen übernommen und beim nächsten Speichern/Export im aktuellen Format ({{major}}.{{minor}}) ausgegeben."
     },
     "version-mismatch": {
       "title": "Achtung: Abweichende Daten-Version",
